[gd_scene load_steps=2 format=3 uid="uid://og2y1qajmvx4"]

[ext_resource type="Script" uid="uid://ctlsl4m22n0h" path="res://scenes/minigames/Numpad/numpad.gd" id="1_qj2vo"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_qj2vo")

[node name="Button" type="Button" parent="."]
offset_left = 368.0
offset_top = 128.0
offset_right = 498.0
offset_bottom = 258.0

[node name="Button2" type="Button" parent="."]
offset_left = 504.0
offset_top = 128.0
offset_right = 634.0
offset_bottom = 258.0

[node name="Button3" type="Button" parent="."]
offset_left = 640.0
offset_top = 128.0
offset_right = 770.0
offset_bottom = 258.0

[node name="Button4" type="Button" parent="."]
offset_left = 368.0
offset_top = 264.0
offset_right = 498.0
offset_bottom = 394.0
metadata/_edit_use_anchors_ = true

[node name="Button5" type="Button" parent="."]
offset_left = 504.0
offset_top = 264.0
offset_right = 634.0
offset_bottom = 394.0
metadata/_edit_use_anchors_ = true

[node name="Button6" type="Button" parent="."]
offset_left = 640.0
offset_top = 264.0
offset_right = 770.0
offset_bottom = 394.0
metadata/_edit_use_anchors_ = true

[node name="Button7" type="Button" parent="."]
offset_left = 368.0
offset_top = 400.0
offset_right = 498.0
offset_bottom = 530.0
metadata/_edit_use_anchors_ = true

[node name="Button8" type="Button" parent="."]
offset_left = 504.0
offset_top = 400.0
offset_right = 634.0
offset_bottom = 530.0
metadata/_edit_use_anchors_ = true

[node name="Button9" type="Button" parent="."]
offset_left = 640.0
offset_top = 400.0
offset_right = 770.0
offset_bottom = 530.0
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 368.0
offset_top = 56.0
offset_right = 768.0
offset_bottom = 96.0
color = Color(0, 1, 0, 1)
